Solving layout issues

--- a/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/java/org/kie/workbench/common/dmn/client/editors/expressions/ExpressionEditorViewImpl.less
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/java/org/kie/workbench/common/dmn/client/editors/expressions/ExpressionEditorViewImpl.less
@@ -25,7 +25,11 @@
   width: 100%;
   height: 100%;
 
-  .new-boxed-expression.hidden, .old-boxed-expression.hidden {
+  .new-boxed-expression {
+    overflow: auto;
+  }
+
+  .new-boxed-expression.hidden, .kie-dmn-expression-type.hidden, .kie-dmn-expression-editor.hidden {
     display: none;
   }
 }
